docker setup for nginx and es on the server

--- a/nginx/conf.d/static.conf
+++ b/nginx/conf.d/static.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name hodavidhara.com;
+    server_name hodavidhara.com *.hodavidhara.com;
 
     location / {
         root /data/www;
