--- a/nginx/conf.d/static.conf
+++ b/nginx/conf.d/static.conf
@@ -3,6 +3,6 @@ server {
     server_name hodavidhara.com *.hodavidhara.com;
 
     location / {
-        root /data/www;
+        root /data/static;
     }
 }
