--- a/es/Dockerfile
+++ b/es/Dockerfile
@@ -1,3 +1,5 @@
 FROM elasticsearch
 COPY config /usr/share/elasticsearch/config
 RUN plugin -i elasticsearch/marvel/latest
+RUN plugin -i lmenezes/elasticsearch-kopf/master
+RUN plugin -i mobz/elasticsearch-head
