--- a/services/nginx/conf.d/hodavidhara.conf
+++ b/services/nginx/conf.d/hodavidhara.conf
@@ -3,7 +3,7 @@ server {
     server_name hodavidhara.com www.hodavidhara.com *.hodavidhara.com;
 
     location / {
-        proxy_pass http://hodavidhara:3000;
+        proxy_pass http://app:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
