--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,10 +1,11 @@
 FROM node:latest
 ADD . /code
 WORKDIR /code
+EXPOSE 3000
 
 RUN npm install
 RUN npm install -g nodemon
+RUN npm install -g gulp
+RUN npm install -g bower
 
-EXPOSE 3000
-
-CMD ["npm", "run-script", "startd"]
+CMD ["npm", "run-script", "prod"]
