--- a/app/package.json
+++ b/app/package.json
@@ -1,12 +1,14 @@
 {
   "name": "hodavidhara",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "The awesome personal website of David Hara.",
   "main": "app.js",
   "scripts": {
-    "start": "node --harmony app.js",
-    "startd": "nodemon --harmony app.js",
-    "test": "npm test"
+    "start": "nodemon --harmony app.js",
+    "test": "npm test",
+    "build": "npm install && bower install && gulp build",
+    "preprod": "npm run-script build",
+    "prod": "nodemon --harmony app.js"
   },
   "repository": {
     "type": "git",
@@ -16,11 +18,22 @@
   "bugs": {
     "url": "https://github.com/hodavidhara/hodavidhara/issues"
   },
-  "license": "ISC",
+  "license": "MIT",
   "homepage": "http://hodavidhara.com",
   "dependencies": {
     "koa": "^0.21.0",
     "koa-handlebars": "^0.5.7",
-    "koa-router": "^5.1.2"
+    "koa-router": "^5.1.2",
+    "koa-static": "^1.4.9"
+  },
+  "devDependencies": {
+    "del": "^1.2.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-debug": "^2.0.1",
+    "gulp-filter": "^3.0.0",
+    "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.2.0",
+    "main-bower-files": "^2.9.0"
   }
 }
