--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "koa-static": "^1.4.9"
   },
   "devDependencies": {
+    "bower": "^1.4.1",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
