--- a/app/package.json
+++ b/app/package.json
@@ -21,20 +21,32 @@
   "license": "MIT",
   "homepage": "http://hodavidhara.com",
   "dependencies": {
+    "browser-request": "^0.3.3",
+    "domquery": "^1.2.0",
+    "domready": "^1.0.8",
+    "handlebars": "^3.0.3",
     "koa": "^0.21.0",
     "koa-handlebars": "^0.5.7",
     "koa-router": "^5.1.2",
-    "koa-static": "^1.4.9"
+    "koa-static": "^1.4.9",
+    "lodash": "^3.10.1",
+    "moment": "^2.10.6",
+    "request": "^2.60.0"
   },
   "devDependencies": {
     "bower": "^1.4.1",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-browserify": "^0.5.1",
     "gulp-debug": "^2.0.1",
     "gulp-filter": "^3.0.0",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.2.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
+    "hbsfy": "^2.2.1",
     "main-bower-files": "^2.9.0"
   }
 }
