--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon --harmony app.js",
     "test": "npm test",
-    "build": "bower install --allow-root && gulp build",
+    "build": "bower install --allow-root && gulp prod",
     "preprod": "npm run-script build",
     "prod": "nodemon --harmony app.js"
   },
