--- a/app/package.json
+++ b/app/package.json
@@ -21,18 +21,22 @@
   "license": "MIT",
   "homepage": "http://hodavidhara.com",
   "dependencies": {
+    "async": "^1.4.2",
     "browser-request": "^0.3.3",
     "domquery": "^1.2.0",
     "domready": "^1.0.8",
+    "github": "^0.2.4",
     "handlebars": "^3.0.3",
     "hbsfy": "^2.2.1",
     "koa": "^0.21.0",
     "koa-handlebars": "^0.5.7",
     "koa-router": "^5.1.2",
     "koa-static": "^1.4.9",
+    "konfig": "^0.2.1",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
-    "request": "^2.60.0"
+    "request": "^2.60.0",
+    "request-promise": "^0.4.3"
   },
   "devDependencies": {
     "bower": "^1.4.1",
