--- a/app/package.json
+++ b/app/package.json
@@ -35,6 +35,7 @@
     "konfig": "^0.2.1",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
+    "newrelic": "^1.21.2",
     "request": "^2.60.0",
     "request-promise": "^0.4.3"
   },
