--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "bower install --allow-root && gulp prod",
     "preprod": "npm run-script build",
-    "prod": "nodemon --harmony app.js"
+    "prod": "node --harmony app.js"
   },
   "repository": {
     "type": "git",
