--- a/services/es/Dockerfile
+++ b/services/es/Dockerfile
@@ -1,4 +1,4 @@
 FROM elasticsearch
-COPY config /usr/share/elasticsearch/config
+ADD config /usr/share/elasticsearch/config
 RUN plugin -i lmenezes/elasticsearch-kopf/master
 RUN plugin -i mobz/elasticsearch-head
