--- a/services/nginx/conf.d/hodavidhara.conf
+++ b/services/nginx/conf.d/hodavidhara.conf
@@ -3,6 +3,11 @@ server {
     server_name hodavidhara.com www.hodavidhara.com *.hodavidhara.com;
 
     location / {
+        root /opt/code/dist;
+        try_files $uri @app;
+    }
+
+    location @app {
         proxy_pass http://app:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
