--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "bower install --allow-root && gulp prod",
-    "preprod": "npm run-script build",
+    "preprod": "npm run build",
     "prod": "node app.js"
   },
   "repository": {
