Fixing ES to work on newest version

--- a/services/es/Dockerfile
+++ b/services/es/Dockerfile
@@ -2,3 +2,5 @@ FROM elasticsearch:latest
 ADD config /usr/share/elasticsearch/config
 RUN plugin install lmenezes/elasticsearch-kopf/master
 RUN plugin install mobz/elasticsearch-head
+
+CMD ["elasticsearch", "--network.host", "_non_loopback_"]
